Event to record.